--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,12 @@ services:
       - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=changeme
+      - AUTH_COOKIE_SECURE=0
     depends_on:
       - db
 
   db:
-    image: postgres:14-alpine
+    image: postgres:14.9-alpine3.18
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
