--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
-DB_NAME=dbname
-DB_USER=rootuser
-DB_PASS=changeme
-SECRET_KEY=changeme
-ALLOWED_HOSTS=127.0.0.1
+DB_NAME="dbname"
+DB_USER="rootuser"
+DB_PASS="changeme"
+SECRET_KEY="changeme"
+DOMAIN='localhost:3000'
+DEBUG='True'
